Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141063

Conflict (409) is not a network error so it should be handled by status code

XMLWordPrintable

    • c20d1be86 (dev), 00250b52a (6.10), 4ff267ba6 (tqtc/lts-6.8)

      One can use the snippet on documentation for testing:
      https://doc.qt.io/qt-6/qml-qtqml-xmlhttprequest.html#sending-requests

      We'd expect status code and possibly request content to show us something if server returns 409 (Conflict). But right now, they do not. Status code ends in 0 at DONE and content is empty.

      Add Conflict error to this list:
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/124397

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            manordheim MÃ¥rten Nordheim
            luqiaochen Luqiao Chen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes