XmlHttpRequest: Don't treat content-related errors as network errors

By not testing for these extra errors they get treated as if the request itself
was a failure, rather than the server returning an error as a perfectly
valid response.

Amends 1faca908dddb90824d94bed6a1561f4f192328d3.

Pick-to: 6.8
Fixes: QTBUG-141063
Change-Id: I3c7aee696ada58de8f1c2dcf7d4c941e644c6ab1
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit c20d1be867642166d3c277406c5fbcdd74d9e130)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>